# PortFolio-Site-

./: .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .rustc_info.json  Cargo.toml  LICENSE  README.md  command.txt
src/: main.rs  server_functions.rs  todo_functions.rs
yew-app/: .gitignore  Cargo.toml  index.html
yew-app/src/: lib.rs  main.rs  routes.rs
yew-app/src/components/: about.rs  about_style.rs  card.rs  header.rs  hero.rs  hero_style.rs  mod.rs
yew-app/src/components/about_section/: about.rs  about_style.rs  mod.rs
yew-app/src/components/hero_section/: hero.rs  hero_style.rs  hey.rs  hey_style.rs  mod.rs
yew-app/src/pages/: global_style.rs  landingPages.rs  landing_pages.rs  mod.rs
yew-app/src/theme/: mod.rs  theme.rs
yew-app2/: .gitignore  .rustc_info.json  Cargo.toml  index.html
yew-app2/src/: global_style.rs  main.rs
yew-app2/src/components/: mod.rs  theme_button.rs
yew-app2/src/hooks/: theme_context.rs
yew-app2/src/scss/base/: _typography.scss
yew-app2/src/scss/components/: _buttons.scss
yew-app2/src/scss/layout/: _footer.scss  _sections.scss
yew-app2/src/scss/section/: _about.scss  _contact.scss  _hero.scss  _projects.scss
yew-app2/src/sections/: about.rs  contacts.rs  footer.rs  hero.rs  mod.rs  projects.rs
yew-app2/src/util/: mod.rs  project_data.rs
