[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.7.0"
gloo-console = "0.2.1"
gloo-utils = "0.1.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
yew = "0.19.3"
yew-router = "0.16.0"
weblog = { version = "0.3", default-features = false, features = ["stdweb"] }
stylist = { version = "0.10.0",features = ["yew_integration"]}
once_cell = "1.8.0"
console_log = { version = "0.2.0", features = ["color"] }