[package]
name = "yew-app2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
once_cell = "1.8.0"
stylist = { version="0.10.0", features = [
    "yew_integration",
    "yew_use_style",
] }